# ChangeLog for app-arch/createrepo
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/createrepo/ChangeLog,v 1.4 2011/11/12 19:37:12 maksbotan Exp $

*createrepo-0.9.8-r1 (12 Nov 2011)
*createrepo-0.9.7-r1 (12 Nov 2011)

  12 Nov 2011; Maxim Koltsov <maksbotan@gentoo.org>
  +createrepo-0.9.7-r1.ebuild, +createrepo-0.9.8-r1.ebuild, metadata.xml:
  Reassign to python & proxy-maintainers, fix bug #308293. Thanks to idella4

  16 Jun 2010; Patrick Lauer <patrick@gentoo.org> createrepo-0.9.8.ebuild:
  Fixing deps for #323793

*createrepo-0.9.8 (26 Apr 2010)

  26 Apr 2010; Mike Frysinger <vapier@gentoo.org> +createrepo-0.9.8.ebuild:
  Version bump.

*createrepo-0.9.7 (12 Apr 2009)

  12 Apr 2009; Mike Frysinger <vapier@gentoo.org> +createrepo-0.9.7.ebuild:
  Initial ebuild by Dick Marinus, Rene Zbinden, Juan Diego Calle, and me
  #116913.