@@ -1,4 +1,5 @@
 DIST createrepo-0.9.9.tar.gz 65114 RMD160 6c0e553a6fc0286436cf736405004e2153ba7a84 SHA1 e4ff7aac85eb2c8d077910e6921c621b4eae256e SHA256 ee897463837b299fb20bf6e970f8c5324cd8b7f26ad3675a9938a2d7ae42ff03
 EBUILD createrepo-0.9.9.ebuild 919 RMD160 2f86445a34c586fe527446298acc2cba6d9769ea SHA1 8363afba95dd073d341514cdc683bfbb56182ab1 SHA256 9188d2dfc4a1a50f515df324981d965cf8d2f384f212d8764f5980f175d04896
-MISC ChangeLog 910 RMD160 d6c1e97a4314b226639e6a32a367b186538567cc SHA1 b7be5826b03d849af438e5e2b9fe05c629dbd43e SHA256 c9829d839acc174867c9b0b6d53ce1122f7cda0e9f0ff2978660e27e20dd9fc3
+EBUILD createrepo-9999.ebuild 941 RMD160 8c2be85326eb7cd6e201c3715bfb1945e62f643a SHA1 156806c23e81e2176d869f62c6874110ed5d1b85 SHA256 395bd38a726c4561ce60c46a22e7c553b6841e7bece28cc6f0ec8893292440cd
+MISC ChangeLog 1042 RMD160 3c47ab80b8914720fcdc312bff03a31d919599f5 SHA1 a6a1e569440a61f53b697a037085569d3a481d71 SHA256 53a87dc577c2e14a880bade11e9e3ba8dda46044bf0ef5424682f920feebf559
 MISC metadata.xml 279 RMD160 63585c0011148cb70b208c36ef92965b1b1f790e SHA1 322cc4ba4dceef5bf5766a67d1d18e6d60f2b391 SHA256 0e85e33b007bcbaf8ffeaa81271e082efd848de91c4712bd30266b3104554092
