@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/createrepo
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-arch/createrepo/ChangeLog,v 1.4 2011/11/12 19:37:12 maksbotan Exp $
+
+*createrepo-9999 (26 Mar 2012)
+
+  26 Mar 2012; <alunduil@gentoo.org> +createrepo-9999.ebuild:
+  Added a live ebuild for createrepo
 
 *createrepo-0.9.8-r1 (12 Nov 2011)
 *createrepo-0.9.7-r1 (12 Nov 2011)
